Uppercase all category titles, bold, better readability, fix folder for logo issue

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -155,10 +155,10 @@ dl dd:after {
 }
 
 .sidebar h6 {
+	text-transform: uppercase;
 	line-height: 1em;
 	font-size: 1.5rem;
 	letter-spacing: 1px;
-	color: #888;
 	font-weight: bold;
 }
 
